tests/NormalTests/paczka1/small_fuzzy/48733273.err
Error in line 7: lSLo7 A684 68,4
Error in line 13: hkwm A684 41,9
